--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "build:scripts": "node scripts/build-scripts.js",
         "build:scss": "node scripts/build-scss.js",
         "clean": "node scripts/clean.js",
-        "start": "npm run build && node scripts/start.js",
+        "start": "node index.js",
         "start:debug": "npm run build && node scripts/start-debug.js"
     },
     "description": "A HTML template featuring sections with full width image backgrounds built with Bootstrap",
@@ -36,7 +36,8 @@
         "url": "https://github.com/StartBootstrap/startbootstrap-full-width-pics.git"
     },
     "dependencies": {
-        "bootstrap": "5.0.2"
+        "bootstrap": "5.0.2",
+        "express": "^4.17.1"
     },
     "devDependencies": {
         "autoprefixer": "10.2.6",
