--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     },
     "dependencies": {
         "bootstrap": "5.0.2",
+        "dotenv": "^10.0.0",
         "express": "^4.17.1"
     },
     "devDependencies": {
